# capital_reallocator/Cargo.toml
[package]
name = "capital_reallocator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "capital_reallocator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"

# Pyth price feeds
pyth-sdk-solana = "0.10.5"
pyth-solana-receiver-sdk = "0.6.1"

# Math and utilities
uint = "0.9.5"
static_assertions = "1.1.0"

# Optional: External protocol CPI
# meteora-dlmm = { git = "https://github.com/MeteoraAg/dlmm-sdk", optional = true }
# kamino-lending = { git = "https://github.com/Kamino-Finance/kamino-lending", optional = true }
# jupiter-cpi = { git = "https://github.com/jup-ag/jupiter-cpi", optional = true }